--- a/pxlmkr/Dialogs/Settings.xaml
+++ b/pxlmkr/Dialogs/Settings.xaml
@@ -1,10 +1,11 @@
-﻿<Window x:Class="pxlmkr.Pages.Settings"
+﻿<Window x:Class="pxlmkr.Dialogs.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pxlmkr.Pages"
+        xmlns:local="clr-namespace:pxlmkr.Dialogs"
         mc:Ignorable="d"
+		WindowStartupLocation="CenterScreen"
         Title="Settings" Height="300" Width="400">
 	<Window.Resources>
 		<ControlTemplate x:Key="MouseActionsComboBox" TargetType="ContentControl">
@@ -46,14 +47,41 @@
 			<ContentControl x:Name="MMBControl" Grid.Row="2" Grid.Column="1" Template="{StaticResource MouseActionsComboBox}" />
 			<Label Content="Right Mouse" Grid.Row="4" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
 			<ContentControl x:Name="RMBControl" Grid.Row="4" Grid.Column="1" Template="{StaticResource MouseActionsComboBox}" />
-			<Label Content="Project Width" Grid.Row="6" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<TextBox Grid.Row="6" Grid.Column="1"/>
-			<Label Content="Project Height" Grid.Row="8" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<TextBox Grid.Row="8" Grid.Column="1"/>
-			<Label Content="Pixel Size" Grid.Row="10" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<TextBox Grid.Row="10" Grid.Column="1"/>
+			<Grid Grid.Row="6" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="2" Margin="30,0,30,0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="85"/>
+					<ColumnDefinition Width="60"/>
+					<ColumnDefinition Width="*"/>
+					<ColumnDefinition Width="85"/>
+					<ColumnDefinition Width="60"/>
+				</Grid.ColumnDefinitions>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="5"/>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="5"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<Label Content="Pixels/Row" Grid.Row="0" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
+				<TextBox Grid.Row="0" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<Label Content="Pixels/Column" Grid.Row="2" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
+				<TextBox Grid.Row="2" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<Label Content="Pixel Size" Grid.Row="4" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
+				<TextBox Grid.Row="4" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<Label Content="Project Width" Grid.Row="0" Grid.Column="3" Foreground="{StaticResource AppForegroundColor}"/>
+				<TextBox Grid.Row="0" Grid.Column="4" VerticalContentAlignment="Center"/>
+				<Label Content="Project Height" Grid.Row="2" Grid.Column="3" Foreground="{StaticResource AppForegroundColor}"/>
+				<TextBox Grid.Row="2" Grid.Column="4" VerticalContentAlignment="Center"/>
+			</Grid>
 			<CheckBox Content="Tracing Overlay" Grid.Row="12" Grid.Column="0" Margin="0,5,0,5" Foreground="{StaticResource AppForegroundColor}"/>
-			<TextBox IsEnabled="False" Grid.Row="12" Grid.Column="1"/>
+			<Grid Grid.Row="12" Grid.Column="1">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*"/>
+					<ColumnDefinition Width="70"/>
+				</Grid.ColumnDefinitions>
+				<TextBox IsEnabled="False" Grid.Column="0" Margin="0,0,5,0" VerticalContentAlignment="Center"/>
+				<Button Content="Browse..." IsEnabled="False" Grid.Column="1"/>
+			</Grid>
 			<CheckBox Content="Autosave" Grid.Row="14" Margin="0,5,0,5" IsChecked="True" Foreground="{StaticResource AppForegroundColor}"/>
 		</Grid>
 	</Grid>
