--- a/pxlmkr/Dialogs/Settings.xaml
+++ b/pxlmkr/Dialogs/Settings.xaml
@@ -6,18 +6,7 @@
         xmlns:local="clr-namespace:pxlmkr.Dialogs"
         mc:Ignorable="d"
 		WindowStartupLocation="CenterScreen"
-        Title="Settings" Height="300" Width="400">
-	<Window.Resources>
-		<ControlTemplate x:Key="MouseActionsComboBox" TargetType="ContentControl">
-			<ComboBox>
-				<ComboBoxItem Content="Paint Primary Color"/>
-				<ComboBoxItem Content="Paint Secondary Color"/>
-				<ComboBoxItem Content="Erase"/>
-				<ComboBoxItem Content="Pan"/>
-				<ComboBoxItem Content="Select"/>
-			</ComboBox>
-		</ControlTemplate>
-	</Window.Resources>
+        Title="Project Settings" Height="250" Width="400">
 	<Grid Background="{StaticResource AppBackgroundColor}">
 		<Grid Margin="10">
 			<Grid.ColumnDefinitions>
@@ -34,26 +23,15 @@
 				<RowDefinition Height="*"/>
 				<RowDefinition Height="5"/>
 				<RowDefinition Height="*"/>
-				<RowDefinition Height="5"/>
-				<RowDefinition Height="*"/>
-				<RowDefinition Height="5"/>
-				<RowDefinition Height="*"/>
-				<RowDefinition Height="5"/>
 				<RowDefinition Height="*"/>
 			</Grid.RowDefinitions>
-			<Label Content="Left Mouse" Grid.Row="0" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<ContentControl x:Name="LMBControl" Grid.Row="0" Grid.Column="1" Template="{StaticResource MouseActionsComboBox}" />
-			<Label Content="Middle Mouse" Grid.Row="2" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<ContentControl x:Name="MMBControl" Grid.Row="2" Grid.Column="1" Template="{StaticResource MouseActionsComboBox}" />
-			<Label Content="Right Mouse" Grid.Row="4" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-			<ContentControl x:Name="RMBControl" Grid.Row="4" Grid.Column="1" Template="{StaticResource MouseActionsComboBox}" />
-			<Grid Grid.Row="6" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="2" Margin="30,0,30,0">
+			<Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="2">
 				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="85"/>
-					<ColumnDefinition Width="60"/>
+					<ColumnDefinition Width="90"/>
+					<ColumnDefinition Width="90"/>
 					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="85"/>
-					<ColumnDefinition Width="60"/>
+					<ColumnDefinition Width="90"/>
+					<ColumnDefinition Width="90"/>
 				</Grid.ColumnDefinitions>
 				<Grid.RowDefinitions>
 					<RowDefinition Height="*"/>
@@ -63,18 +41,26 @@
 					<RowDefinition Height="*"/>
 				</Grid.RowDefinitions>
 				<Label Content="Pixels/Row" Grid.Row="0" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-				<TextBox Grid.Row="0" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<TextBox x:Name="PixelsPerRowTextBox" Grid.Row="0" Grid.Column="1" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
 				<Label Content="Pixels/Column" Grid.Row="2" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-				<TextBox Grid.Row="2" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<TextBox x:Name="PixelsPerColumnTextBox" Grid.Row="2" Grid.Column="1" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
 				<Label Content="Pixel Size" Grid.Row="4" Grid.Column="0" Foreground="{StaticResource AppForegroundColor}"/>
-				<TextBox Grid.Row="4" Grid.Column="1" VerticalContentAlignment="Center"/>
+				<TextBox x:Name="PixelSizeTextBox" Grid.Row="4" Grid.Column="1" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
 				<Label Content="Project Width" Grid.Row="0" Grid.Column="3" Foreground="{StaticResource AppForegroundColor}"/>
-				<TextBox Grid.Row="0" Grid.Column="4" VerticalContentAlignment="Center"/>
+				<TextBox x:Name="ProjectWidthTextBox" Grid.Row="0" Grid.Column="4" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
 				<Label Content="Project Height" Grid.Row="2" Grid.Column="3" Foreground="{StaticResource AppForegroundColor}"/>
-				<TextBox Grid.Row="2" Grid.Column="4" VerticalContentAlignment="Center"/>
+				<TextBox x:Name="ProjectHeightTextBox" Grid.Row="2" Grid.Column="4" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
+				<Grid Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="*"/>
+					</Grid.ColumnDefinitions>
+					<Button Content="Set Default" IsEnabled="False" Grid.Column="0" Margin="0,0,2.5,0"/>
+					<Button Content="Reset" Grid.Column="1" Margin="2.5,0,0,0"/>
+				</Grid>
 			</Grid>
-			<CheckBox Content="Tracing Overlay" Grid.Row="12" Grid.Column="0" Margin="0,5,0,5" Foreground="{StaticResource AppForegroundColor}"/>
-			<Grid Grid.Row="12" Grid.Column="1">
+			<CheckBox Content="Tracing Overlay" Grid.Row="6" Grid.Column="0" Margin="0,5,0,5" Foreground="{StaticResource AppForegroundColor}"/>
+			<Grid Grid.Row="6" Grid.Column="1">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="*"/>
 					<ColumnDefinition Width="70"/>
@@ -82,7 +68,12 @@
 				<TextBox IsEnabled="False" Grid.Column="0" Margin="0,0,5,0" VerticalContentAlignment="Center"/>
 				<Button Content="Browse..." IsEnabled="False" Grid.Column="1"/>
 			</Grid>
-			<CheckBox Content="Autosave" Grid.Row="14" Margin="0,5,0,5" IsChecked="True" Foreground="{StaticResource AppForegroundColor}"/>
+			<CheckBox Content="Autosave" Grid.Row="8" Margin="0,5,0,5" IsChecked="True" Foreground="{StaticResource AppForegroundColor}"/>
+			<StackPanel Grid.Row="17" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+				<Button x:Name="CancelSettingsChanges" Content="Cancel" Width="100" Click="CancelSettingsChanges_Click"/>
+				<Separator Margin="2.5"/>
+				<Button x:Name="SaveSettingsChanges" Content="Save" Width="100" Click="SaveSettingsChanges_Click"/>
+			</StackPanel>
 		</Grid>
 	</Grid>
 </Window>
