--- a/pxlmkr/Settings.xaml
+++ b/pxlmkr/Settings.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="pxlmkr.Dialogs.Settings"
+﻿<Window x:Class="pxlmkr.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:pxlmkr.Dialogs"
+        xmlns:local="clr-namespace:pxlmkr"
         mc:Ignorable="d"
 		WindowStartupLocation="CenterScreen"
         Title="Project Settings" Height="250" Width="400">
@@ -50,14 +50,7 @@
 				<TextBox x:Name="ProjectWidthTextBox" Grid.Row="0" Grid.Column="4" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
 				<Label Content="Project Height" Grid.Row="2" Grid.Column="3" Foreground="{StaticResource AppForegroundColor}"/>
 				<TextBox x:Name="ProjectHeightTextBox" Grid.Row="2" Grid.Column="4" VerticalContentAlignment="Center" LostFocus="ValidateDimensionInputs"/>
-				<Grid Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2">
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*"/>
-						<ColumnDefinition Width="*"/>
-					</Grid.ColumnDefinitions>
-					<Button Content="Set Default" IsEnabled="False" Grid.Column="0" Margin="0,0,2.5,0"/>
-					<Button Content="Reset" Grid.Column="1" Margin="2.5,0,0,0"/>
-				</Grid>
+				<Button x:Name="SetDefaultButton" Content="Set Default" IsEnabled="False" Grid.Row ="4" Grid.Column="4" Margin="0,0,2.5,0"/>
 			</Grid>
 			<CheckBox Content="Tracing Overlay" Grid.Row="6" Grid.Column="0" Margin="0,5,0,5" Foreground="{StaticResource AppForegroundColor}"/>
 			<Grid Grid.Row="6" Grid.Column="1">
